--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         </div>
 
         <div class="direction_buttons">
-            <button>
-                <i class="fas fa-arrow-up"></i>
+            <button data-direction="to top">
+                <i class="fas fa-arrow-up" data-direction="to top"></i>
             </button>
-            <button>
-                <i class="fas fa-arrow-down"></i>
+            <button class='active' data-direction="to bottom">
+                <i class="fas fa-arrow-down" data-direction="to bottom"></i>
             </button>
-            <button>
-                <i class="fas fa-arrow-right"></i>
+            <button data-direction="to right">
+                <i class="fas fa-arrow-right" data-direction="to right"></i>
             </button>
-            <button>
-                <i class="fas fa-arrow-left"></i>
+            <button data-direction="to left">
+                <i class="fas fa-arrow-left" data-direction="to left"></i>
             </button>
         </div>
 
