add disabled att for textarea

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="gradient-preview"></div>
 
         <div class="code-area">
-            <textarea id="code"></textarea>
+            <textarea id="code" disabled></textarea>
             <button id="copy">کپی</button>
         </div>
     </div>
