add span for counter color number

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <div id="color-container" class="color-input">
             <div class="color-item">
                 <input type="color" value="#1488cc">
+                <span>انتخاب رنگ 1</span>
                 <button class="remove-color">حذف</button>
             </div>
             <div class="color-item">
                 <input type="color" value="#2b32b2">
+                <span>انتخاب رنگ 2</span>
                 <button class="remove-color">حذف</button>
             </div>
         </div>
