--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
+    <div class="gitHub">
+        <a href="https://github.com/root404-ir/gradient-generator" target="_blank">
+            <span>Source Code in GitHub</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+                viewBox="0 0 16 16">
+                <path
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+            </svg>
+        </a>
+    </div>
+
     <div class="container">
+        <!-- رنگ‌ها -->
         <div id="color-container" class="color-input">
             <div class="color-item">
                 <input type="color" value="#1488cc">
@@ -27,11 +39,24 @@
             <button id="add-color">اضافه کردن رنگ</button>
         </div>
 
+        <!-- تنظیمات پیشرفته -->
+        <div class="advanced-settings">
+            <label for="gradient-type">نوع گرادیانت:</label>
+            <select id="gradient-type">
+                <option value="linear">خطی</option>
+                <option value="radial">دایره‌ای</option>
+            </select>
+
+            <label for="angle">زاویه:</label>
+            <input type="number" id="angle" value="90" min="0" max="360">
+        </div>
+
+        <!-- جهت‌ها -->
         <div class="direction_buttons">
             <button data-direction="to top">
                 <i class="fas fa-arrow-up" data-direction="to top"></i>
             </button>
-            <button class='active' data-direction="to bottom">
+            <button class="active" data-direction="to bottom">
                 <i class="fas fa-arrow-down" data-direction="to bottom"></i>
             </button>
             <button data-direction="to right">
@@ -42,19 +67,33 @@
             </button>
         </div>
 
+        <!-- پیش‌نمایش -->
         <div class="gradient-preview"></div>
 
+        <!-- کد گرادیانت -->
         <div class="code-area">
             <textarea id="code" disabled></textarea>
             <button id="copy">کپی</button>
         </div>
+
+        <!-- ذخیره‌سازی و دانلود -->
+        <div class="save-load-buttons">
+            <button id="save-settings">ذخیره تنظیمات</button>
+            <button id="load-settings">بازیابی تنظیمات</button>
+            <button id="reset-settings">بازنشانی</button>
+            <button id="download-css">دانلود CSS</button>
+            <button id="download-image">دانلود تصویر</button>
+        </div>
     </div>
+
     <div class="copy-code-alert d-none">
         <span>کد شما با موفقیت کپی شد!</span>
     </div>
 
+    <!-- فایل‌های اسکریپت -->
     <script src="./assets/fontawesome/js/all.min.js"></script>
     <script src="./assets/js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 
 </html>
