--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="gitHub">
         <a href="https://github.com/root404-ir/gradient-generator" target="_blank">
-            <span>Source Code in GitHub</span>
+            <span>Source Code in GitHub v2</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
                 viewBox="0 0 16 16">
                 <path
